added extra card info

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
 	text-transform: capitalize;
 }
 
+.card-text {
+	font-style: italic;
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
